--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
     <meta name="robots" content="index, follow">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="YOUR_GOOGLE_DRIVE_PUBLIC_LINK_HERE">
+    <meta property="og:url" content="https://panthercast.pages.dev">
     <meta property="og:title" content="Panther Cast - The Ultimate Screen Casting App">
     <meta property="og:description" content="Seamless HD screen mirroring with internal audio. No Lags. No Ads. Built by Panthera Store.">
     <meta property="og:image" content="images/share.png">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="YOUR_GOOGLE_DRIVE_PUBLIC_LINK_HERE">
+    <meta property="twitter:url" content="https://panthercast.pages.dev">
     <meta property="twitter:title" content="Panther Cast - The Ultimate Screen Casting App">
     <meta property="twitter:description" content="Seamless HD screen mirroring with internal audio. Built by Panthera Store.">
     <meta property="twitter:image" content="images/share.png">
 
     <link rel="stylesheet" href="style.css">
-    
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -55,19 +54,25 @@
 
     <section class="download-section">
         <h2>Download Panther Cast</h2>
+        
+        <div style="text-align: center; background: rgba(255, 71, 87, 0.1); border: 2px dashed #ff4757; padding: 15px; border-radius: 10px; max-width: 600px; margin: 0 auto 30px auto;">
+            <p style="color: #ff4757; font-size: 1.1rem; font-weight: 600; margin-bottom: 5px;">📦 Both apps are inside a secure ZIP file in the Drive folder.</p>
+            <p style="color: #ffffff; font-size: 1.1rem;">Extraction Password: <strong style="background: #ff4757; padding: 2px 8px; border-radius: 5px; letter-spacing: 2px;">1234</strong></p>
+        </div>
+
         <div class="download-container">
             <div class="app-card">
                 <img src="images/logo.png" alt="Mobile Sender">
                 <h3>Mobile Sender App</h3>
                 <p>Installs on your phone to capture screen & audio.</p>
-                <a href="REPLACE_WITH_MOBILE_APK_DRIVE_LINK" target="_blank" class="btn download-btn">Download for Phone</a>
+                <a href="https://drive.google.com/drive/folders/17OnPRL5C5rJHYnc2LuNV--mgtcxUneLY" target="_blank" class="btn download-btn">Open Drive Folder</a>
             </div>
 
             <div class="app-card">
                 <img src="images/logo.png" alt="TV Receiver">
                 <h3>TV Receiver App</h3>
                 <p>Installs on your Android TV to display the stream.</p>
-                <a href="REPLACE_WITH_TV_APK_DRIVE_LINK" target="_blank" class="btn download-btn">Download for TV</a>
+                <a href="https://drive.google.com/drive/folders/17OnPRL5C5rJHYnc2LuNV--mgtcxUneLY" target="_blank" class="btn download-btn">Open Drive Folder</a>
             </div>
         </div>
     </section>
