--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
     <meta name="keywords" content="Panther Cast, screen mirroring, cast to tv, android to android tv, local wifi cast, screen share, Panthera Store, Ayush Tiwari">
     <meta name="author" content="Ayush Tiwari">
     <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#0d0d12">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://panthercast.pages.dev">
+    <meta property="og:url" content="https://panthercast.pages.dev/">
     <meta property="og:title" content="Panther Cast - The Ultimate Screen Casting App">
     <meta property="og:description" content="Seamless HD screen mirroring with internal audio. No Lags. No Ads. Built by Panthera Store.">
-    <meta property="og:image" content="images/share.png">
+    <meta property="og:image" content="https://panthercast.pages.dev/images/share.png">
+    <meta property="og:image:alt" content="Panther Cast HD Mirroring">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://panthercast.pages.dev">
+    <meta property="twitter:url" content="https://panthercast.pages.dev/">
     <meta property="twitter:title" content="Panther Cast - The Ultimate Screen Casting App">
     <meta property="twitter:description" content="Seamless HD screen mirroring with internal audio. Built by Panthera Store.">
-    <meta property="twitter:image" content="images/share.png">
+    <meta property="twitter:image" content="https://panthercast.pages.dev/images/share.png">
 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
@@ -56,7 +60,7 @@
         <h2>Download Panther Cast</h2>
         
         <div style="text-align: center; background: rgba(255, 71, 87, 0.1); border: 2px dashed #ff4757; padding: 15px; border-radius: 10px; max-width: 600px; margin: 0 auto 30px auto;">
-            <p style="color: #ff4757; font-size: 1.1rem; font-weight: 600; margin-bottom: 5px;">📦 Both apps are inside a secure ZIP file in the Drive folder.</p>
+            <p style="color: #ff4757; font-size: 1.1rem; font-weight: 600; margin-bottom: 5px;">📦 Both apps are securely packed in a ZIP file.</p>
             <p style="color: #ffffff; font-size: 1.1rem;">Extraction Password: <strong style="background: #ff4757; padding: 2px 8px; border-radius: 5px; letter-spacing: 2px;">1234</strong></p>
         </div>
 
